--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,14 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<style>
+			body, html {
+				margin: 0;
+				padding: 0;
+				height: 100%;
+				overflow: hidden; /* Prevent scrollbars */
+			}
+		</style>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
