--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 				margin: 0;
 				padding: 0;
 				height: 100%;
-				overflow: hidden; /* Prevent scrollbars */
+				overflow: auto; /* Prevent scrollbars */
 			}
 		</style>
 		%sveltekit.head%
