--- a/src/app.html
+++ b/src/app.html
@@ -18,3 +18,10 @@
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+
+<style>
+	:root {
+		--plblue: #28AAE2;
+		font-family: 'Roboto', sans-serif;
+	}
+</style>
