--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+	<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="c2fb4618-8a25-41a5-9e89-4fc98fd0a97e" data-blockingmode="auto" type="text/javascript"></script>
 	<!-- Google Tag Manager -->
 	<script>(function (w, d, s, l, i) {
 			w[l] = w[l] || []; w[l].push({
@@ -35,7 +35,6 @@
 			style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	<div style="display: contents">%sveltekit.body%</div>
-	<script id="CookieDeclaration" src="https://consent.cookiebot.com/85724fb7-9fbc-4084-98ac-9194ab368187/cd.js" type="text/javascript" async></script>
 </body>
 
 </html>
